src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__set_clock_offset_9070xt_new.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: table.get_commands(&table.clone().into()).unwrap()
---
- s 200
- vo -50
