src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__set_max_values_6800.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: table.get_commands().unwrap()
---
- s 1 2400
- m 1 1050
- vo 10

