src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__write_commands_6900xt_custom.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: commands
---
- s 0 800
- s 1 2400
- m 1 900

