src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__write_commands_6900xt_default.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: commands
---
- s 0 500
- s 1 2499
- m 0 97
- m 1 1000
- vo -10

