src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__write_new_min_over_old_max_7900xt.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: commands
---
- s 1 3000
- s 0 3000
- s 1 3000
- m 1 1350
- m 0 1350
- m 1 1350
